--- a/BLOG/package.json
+++ b/BLOG/package.json
@@ -13,10 +13,15 @@
     "art-template": "^4.13.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "config": "^3.3.6",
+    "dateformat": "^5.0.2",
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
     "joi": "^14.3.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "mongoose-sex-page": "^1.2.4",
+    "morgan": "^1.10.0"
   }
 }
